# container_ocr

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: contocr.h  detector.h  extraction.h  params.h  postprocess.h  preprocess.h  recognizer.h  utils.h
include/clipper2/: clipper.engine.h  clipper.export.h  clipper.h  clipper.minkowski.h  clipper.offset.h  clipper.rectclip.h
src/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp  contocr.cpp  detector.cpp  extraction.cpp  main.cpp  postprocess.cpp  preprocess.cpp  recognizer.cpp  utils.cpp
